<resources>
    <string name="app_name">Guests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">All Guests</string>
    <string name="menu_present">Present</string>
    <string name="menu_absent">Absent</string>

    <string name="no_confirmed">No confirmed</string>
    <string name="done">Done</string>

    <string name="guest_name">Name</string>
    <string name="guest_confirmation">Confirmation</string>

</resources>