<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".View.GuestActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_name"/>

    <EditText
        android:id="@+id/guest_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_confirmation"
        android:layout_marginTop="16dp"/>

    <RadioGroup

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btn_no_confirmed"
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/no_confirmed"/>

        <RadioButton
            android:id="@+id/btn_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_present"/>

        <RadioButton
            android:id="@+id/btn_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_absent"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/gray"/>

</LinearLayout>